cmake_minimum_required(VERSION 2.8)

project(ChatPrototype)

FILE(GLOB Headers "*.h")
FILE(GLOB Sources "*.cpp")

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
option(USE_LIBCPP "Use libc++ as the stdlib" NO)
if(USE_LIBCPP)
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -stdlib=libc++")
 endif()

message("-- Trying to find Qt5Widgets...")
find_package (Qt5Widgets QUIET)
if(${Qt5Widgets_FOUND})
	message("-- Found it! Will use Qt5.")
        set(CMAKE_AUTOMOC ON)
        set(CMAKE_INCLUDE_CURRENT_DIR ON)
	include_directories(${Qt5Widgets_INCLUDES})
	add_definitions(${Qt5Widgets_DEFINITIONS})
        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${Qt5Widgets_EXECUTABLE_COMPILE_FLAGS}")
	set(CHAT_LINK_LIBRARIES ${Qt5Widgets_LIBRARIES})
else()
	message("-- Couldn't find it. Trying to downgrade to Qt4...")
	message("-- Note that the application works a lot better with Qt5 on my Mac.")
	message("-- If you're having problems, try compiling against Qt5.")
	message("-- ****************************************************************")
	find_package (Qt 4 REQUIRED QtCore QtGui)
	include(${QT_USE_FILE})
	QT4_WRAP_CPP(Mocs ${Headers})
	set(CHAT_LINK_LIBRARIES ${QT_LIBRARIES})
endif()

add_executable(ChatPrototype ${Sources} ${Headers} ${Mocs})
target_link_libraries(ChatPrototype ${CHAT_LINK_LIBRARIES})
